--- a/08-Programming-Basics.Rmd
+++ b/08-Programming-Basics.Rmd
@@ -55,7 +55,7 @@ All manual parameter modification occurs in the **EDITOR**. (Programmer in some 
 -   Press [VIBE] + [RESET]
     
 
-See also: [8.3.10. Release and Home Sequences](#Release-and-Home -Sequences-8.3.1)
+See also: [8.3.10. Release and Home Sequences](#Release-and-Home-Sequences-8.3.10)
 
 ### Blind Editor {#blind-editor-8.1.2.}
 
@@ -201,7 +201,7 @@ Is accessed from the Editor Toolbar. It can be used prior to entering the Advanc
 2.  Using keypad syntax.
     
 
-See: [8.3.7. Fixture Selection (Detailed)](#Fixture-Selection-(Detailed)-8.3.7)
+See: [8.3.7. Fixture Selection (Detailed)](#Fixture-Selection-Detailed-8.3.7)
 
 **Using [Fan] Mode:**
 
@@ -289,7 +289,7 @@ Instead of fanning Blocks based on the selection, fixture **Groups** may also be
     
 -   Use any of the above methods to fan parameters by Group Parameters may also be fanned using keypad syntax.
     
--   [Fixture Selection (Detailed)](#Fixture-Selection-(Detailed)-8.3.7)
+-   [Fixture Selection (Detailed)](#Fixture-Selection-Detailed-8.3.7)
 
 ### Highlight Mode {#highlight-mode-8.2.5.}
 
@@ -461,7 +461,7 @@ Working with Fixtures:
     
 -   [8.3.9. Setting Parameters using Interactive Encoder Wheels](#Setting-Parameters-using-Interactive-Encoder-Wheels-8.3.9.)
     
--   [8.3.10. Release and Home Sequences](#Release-and-Home-Sequences-8.3.1)
+-   [8.3.10. Release and Home Sequences](#Release-and-Home-Sequences-8.3.10)
 
 ### Fixture Selection basics {#Fixture-Selection-basics-8.3.11}
 
@@ -549,7 +549,7 @@ Parameter values may be set using either Vibe's intuitive **Smart Screen** picke
 
 See:
 
--   [8.1. Virtual Parameters](#OperationalPhilosophy-7.1.)
+-   [7.1. Virtual Parameters](#OperationalPhilosophy-7.1.)
 
 
 
@@ -1021,11 +1021,10 @@ Vibe has 4 additional interactive push encoder wheels along the right hand side 
 
 In future releases it will be possible for users to customize the defaults.
 
-![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FDGXNEIrHnemjvPSftsn9%2F9.3.8.webp?alt=media&token=26fc8f97-07b6-488f-a54e-2e0234b4f8a8)
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FDGXNEIrHnemjvPSftsn9%2F9.3.9.webp?alt=media&token=26fc8f97-07b6-488f-a54e-2e0234b4f8a8)
 
 
-
-### Release and Home Sequences {#Release-and-Home-Sequences-8.3.1}
+### Release and Home Sequences {#Release-and-Home-Sequences-8.3.10}
 
 
 **Release** - Removes fixtures or fixture parameter values from the editor 
