--- a/18-Topo-Topographical-Display.Rmd
+++ b/18-Topo-Topographical-Display.Rmd
@@ -136,7 +136,7 @@ Navigate to a Topo view
 5. Tap [<img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/>](image.png) aor press [ENTER] - This closes the pop-up, enters Topo {Edit} mode, and the grid will be displayed.
 
 
-## Adding fixtures {#Adding-fixtures-18.4}
+## Adding fixtures {#Adding-fixtures-18.4.}
 
 There are two ways to add fixtures to a Topo 
 
