--- a/21-MIDI.Rmd
+++ b/21-MIDI.Rmd
@@ -231,4 +231,4 @@ Recommended reading: http://jac.michaeldrolet.net/SCS_10_Help/scs_options_mid_ms
 ## MIDI Time Code {#MIDITimeCode-21.5}
 
 See: 
-[20.3. Configuring Timecode](#ConfiguringTimecode-20.3.)
+[20.2. Configure Timecode](#Configure-Timecode-20.2.)
